// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`RecipientList should render condensed variant 1`] = `
<div>
  <div
    class="sc-Axmtr SNYwX"
  >
    <div
      class="sc-AxhUy gupDsa -mt-3"
      role="table"
    >
      <table
        cellpadding="0"
        class="table-auto"
      >
        <thead>
          <tr
            class="border-b border-theme-neutral-300 dark:border-theme-neutral-800"
            role="row"
          >
            <th
              class="relative text-sm text-left select-none text-theme-neutral border-theme-neutral-300 dark:text-theme-neutral-dark dark:border-theme-neutral-800 m-0 p-3 first:pl-0 last:pr-0 font-semibold hasBorder "
              colspan="1"
              data-testid="table__th--0"
              role="columnheader"
            >
              <div
                class="flex flex-inline align-top hidden"
              >
                <div>
                  Avatar
                </div>
              </div>
            </th>
            <th
              class="relative text-sm text-left select-none text-theme-neutral border-theme-neutral-300 dark:text-theme-neutral-dark dark:border-theme-neutral-800 m-0 p-3 first:pl-0 last:pr-0 font-semibold hasBorder "
              colspan="1"
              data-testid="table__th--1"
              role="columnheader"
            >
              <div
                class="flex flex-inline align-top hidden"
              >
                <div>
                  Address
                </div>
              </div>
            </th>
            <th
              class="relative text-sm text-left select-none text-theme-neutral border-theme-neutral-300 dark:text-theme-neutral-dark dark:border-theme-neutral-800 m-0 p-3 first:pl-0 last:pr-0 font-semibold hasBorder "
              colspan="1"
              data-testid="table__th--2"
              role="columnheader"
            >
              <div
                class="flex flex-inline align-top hidden"
              >
                <div>
                  Amount
                </div>
              </div>
            </th>
            <th
              class="relative text-sm text-left select-none text-theme-neutral border-theme-neutral-300 dark:text-theme-neutral-dark dark:border-theme-neutral-800 m-0 p-3 first:pl-0 last:pr-0 font-semibold hasBorder "
              colspan="1"
              data-testid="table__th--3"
              role="columnheader"
            >
              <div
                class="flex flex-inline align-top hidden"
              >
                <div>
                  Action
                </div>
              </div>
            </th>
          </tr>
        </thead>
        <tbody
          role="rowgroup"
        >
          <tr
            class="border-b border-dashed last:border-b-0 border-theme-neutral-300 dark:border-theme-neutral-800"
            data-testid="recipient-list__recipient-list-item"
          >
            <td
              class="w-12 py-4"
            >
              <div
                class="Avatar__AvatarWrapper-sc-1vsy2s2-0 jNpDPZ"
                data-testid="Avatar"
              >
                <div
                  class="w-full h-full"
                >
                  <img
                    alt="FJKDSALJFKASLJFKSDAJD333FKFKDSAJFKSAJFKLASJKDFJ"
                    src="data:image/svg+xml;utf8,<svg version=\\"1.1\\" xmlns=\\"http://www.w3.org/2000/svg\\" width=\\"100\\" height=\\"100\\" viewBox=\\"0 0 100 100\\"><style>circle{mix-blend-mode:soft-light;}</style><rect fill=\\"rgb(76, 175, 80)\\" width=\\"100\\" height=\\"100\\"/><circle r=\\"40\\" cx=\\"20\\" cy=\\"30\\" fill=\\"rgb(156, 39, 176)\\"/><circle r=\\"35\\" cx=\\"100\\" cy=\\"70\\" fill=\\"rgb(255, 193, 7)\\"/><circle r=\\"50\\" cx=\\"80\\" cy=\\"50\\" fill=\\"rgb(0, 188, 212)\\"/></svg>"
                    title="FJKDSALJFKASLJFKSDAJD333FKFKDSAJFKSAJFKLASJKDFJ"
                  />
                </div>
              </div>
            </td>
            <td
              class="py-4"
            >
              <div
                class="max-w-lg"
              >
                <div
                  class="inline-flex items-center"
                >
                  <span
                    class="max-w-24 flex-auto truncate mr-2 font-semibold text-base text-theme-text"
                    data-testid="address__wallet-name"
                  >
                    Recipient 1
                  </span>
                  <span
                    class="sc-AxjAm StDqN text-theme-neutral-500 dark:text-theme-neutral-700 truncate font-semibold text-base"
                    data-testid="address__wallet-address"
                  >
                    FJKDSALJFKASLJFKSDAJD333FKFKDSAJFKSAJFKLASJKDFJ
                  </span>
                </div>
              </div>
            </td>
            <td
              class="py-4 text-right"
            >
              <div
                class="sc-AxhCb jceXZf"
                color="danger"
              >
                <span
                  data-testid="Amount"
                >
                  0.000001 ARK
                </span>
              </div>
            </td>
          </tr>
          <tr
            class="border-b border-dashed last:border-b-0 border-theme-neutral-300 dark:border-theme-neutral-800"
            data-testid="recipient-list__recipient-list-item"
          >
            <td
              class="w-12 py-4"
            >
              <div
                class="Avatar__AvatarWrapper-sc-1vsy2s2-0 jNpDPZ"
                data-testid="Avatar"
              >
                <div
                  class="w-full h-full"
                >
                  <img
                    alt="AhFJKDSALJFKASLJFKSDEAJ333FKFKDSAJFKSAJFKLASJKDFJ"
                    src="data:image/svg+xml;utf8,<svg version=\\"1.1\\" xmlns=\\"http://www.w3.org/2000/svg\\" width=\\"100\\" height=\\"100\\" viewBox=\\"0 0 100 100\\"><style>circle{mix-blend-mode:soft-light;}</style><rect fill=\\"rgb(255, 152, 0)\\" width=\\"100\\" height=\\"100\\"/><circle r=\\"50\\" cx=\\"10\\" cy=\\"50\\" fill=\\"rgb(139, 195, 74)\\"/><circle r=\\"60\\" cx=\\"70\\" cy=\\"30\\" fill=\\"rgb(63, 81, 181)\\"/><circle r=\\"55\\" cx=\\"20\\" cy=\\"70\\" fill=\\"rgb(76, 175, 80)\\"/></svg>"
                    title="AhFJKDSALJFKASLJFKSDEAJ333FKFKDSAJFKSAJFKLASJKDFJ"
                  />
                </div>
              </div>
            </td>
            <td
              class="py-4"
            >
              <div
                class="max-w-lg"
              >
                <div
                  class="inline-flex items-center"
                >
                  <span
                    class="max-w-24 flex-auto truncate mr-2 font-semibold text-base text-theme-text"
                    data-testid="address__wallet-name"
                  >
                    Recipient 2
                  </span>
                  <span
                    class="sc-AxjAm StDqN text-theme-neutral-500 dark:text-theme-neutral-700 truncate font-semibold text-base"
                    data-testid="address__wallet-address"
                  >
                    AhFJKDSALJFKASLJFKSDEAJ333FKFKDSAJFKSAJFKLASJKDFJ
                  </span>
                </div>
              </div>
            </td>
            <td
              class="py-4 text-right"
            >
              <div
                class="sc-AxhCb jceXZf"
                color="danger"
              >
                <span
                  data-testid="Amount"
                >
                  0.000001 ARK
                </span>
              </div>
            </td>
          </tr>
          <tr
            class="border-b border-dashed last:border-b-0 border-theme-neutral-300 dark:border-theme-neutral-800"
            data-testid="recipient-list__recipient-list-item"
          >
            <td
              class="w-12 py-4"
            >
              <div
                class="Avatar__AvatarWrapper-sc-1vsy2s2-0 jNpDPZ"
                data-testid="Avatar"
              >
                <div
                  class="w-full h-full"
                >
                  <img
                    alt="FAhFJKDSALJFKASLJFKSFDAJ333FKFKDSAJFKSAJFKLASJKDFJ"
                    src="data:image/svg+xml;utf8,<svg version=\\"1.1\\" xmlns=\\"http://www.w3.org/2000/svg\\" width=\\"100\\" height=\\"100\\" viewBox=\\"0 0 100 100\\"><style>circle{mix-blend-mode:soft-light;}</style><rect fill=\\"rgb(63, 81, 181)\\" width=\\"100\\" height=\\"100\\"/><circle r=\\"35\\" cx=\\"20\\" cy=\\"60\\" fill=\\"rgb(0, 188, 212)\\"/><circle r=\\"45\\" cx=\\"10\\" cy=\\"50\\" fill=\\"rgb(205, 220, 57)\\"/><circle r=\\"50\\" cx=\\"80\\" cy=\\"40\\" fill=\\"rgb(76, 175, 80)\\"/></svg>"
                    title="FAhFJKDSALJFKASLJFKSFDAJ333FKFKDSAJFKSAJFKLASJKDFJ"
                  />
                </div>
              </div>
            </td>
            <td
              class="py-4"
            >
              <div
                class="max-w-lg"
              >
                <div
                  class="inline-flex items-center"
                >
                  <span
                    class="max-w-24 flex-auto truncate mr-2 font-semibold text-base text-theme-text"
                    data-testid="address__wallet-name"
                  >
                    Recipient 3
                  </span>
                  <span
                    class="sc-AxjAm StDqN text-theme-neutral-500 dark:text-theme-neutral-700 truncate font-semibold text-base"
                    data-testid="address__wallet-address"
                  >
                    FAhFJKDSALJFKASLJFKSFDAJ333FKFKDSAJFKSAJFKLASJKDFJ
                  </span>
                </div>
              </div>
            </td>
            <td
              class="py-4 text-right"
            >
              <div
                class="sc-AxhCb jceXZf"
                color="danger"
              >
                <span
                  data-testid="Amount"
                >
                  0.000001 ARK
                </span>
              </div>
            </td>
          </tr>
          <tr
            class="border-b border-dashed last:border-b-0 border-theme-neutral-300 dark:border-theme-neutral-800"
            data-testid="recipient-list__recipient-list-item"
          >
            <td
              class="w-12 py-4"
            >
              <div
                class="Avatar__AvatarWrapper-sc-1vsy2s2-0 jNpDPZ"
                data-testid="Avatar"
              >
                <div
                  class="w-full h-full"
                >
                  <img
                    alt="FAhFJKDSALJFKASLJFKSFDAJ333FKFKDSAJFKSAJFKLASJKDFJ"
                    src="data:image/svg+xml;utf8,<svg version=\\"1.1\\" xmlns=\\"http://www.w3.org/2000/svg\\" width=\\"100\\" height=\\"100\\" viewBox=\\"0 0 100 100\\"><style>circle{mix-blend-mode:soft-light;}</style><rect fill=\\"rgb(63, 81, 181)\\" width=\\"100\\" height=\\"100\\"/><circle r=\\"35\\" cx=\\"20\\" cy=\\"60\\" fill=\\"rgb(0, 188, 212)\\"/><circle r=\\"45\\" cx=\\"10\\" cy=\\"50\\" fill=\\"rgb(205, 220, 57)\\"/><circle r=\\"50\\" cx=\\"80\\" cy=\\"40\\" fill=\\"rgb(76, 175, 80)\\"/></svg>"
                    title="FAhFJKDSALJFKASLJFKSFDAJ333FKFKDSAJFKSAJFKLASJKDFJ"
                  />
                </div>
              </div>
            </td>
            <td
              class="py-4"
            >
              <div
                class="max-w-lg"
              >
                <div
                  class="inline-flex items-center"
                >
                  <span
                    class="sc-AxjAm StDqN text-theme-text truncate font-semibold text-base"
                    data-testid="address__wallet-address"
                  >
                    FAhFJK … SJKDFJ
                  </span>
                </div>
              </div>
            </td>
            <td
              class="py-4 text-right"
            >
              <div
                class="sc-AxhCb jceXZf"
                color="danger"
              >
                <span
                  data-testid="Amount"
                >
                  0.000001 ARK
                </span>
              </div>
            </td>
          </tr>
        </tbody>
      </table>
    </div>
  </div>
</div>
`;

exports[`RecipientList should render editable 1`] = `
<div>
  <div
    class="sc-Axmtr SNYwX"
  >
    <div
      class="sc-AxhUy gupDsa -mt-3"
      role="table"
    >
      <table
        cellpadding="0"
        class="table-auto"
      >
        <thead>
          <tr
            class="border-b border-theme-neutral-300 dark:border-theme-neutral-800"
            role="row"
          >
            <th
              class="relative text-sm text-left select-none text-theme-neutral border-theme-neutral-300 dark:text-theme-neutral-dark dark:border-theme-neutral-800 m-0 p-3 first:pl-0 last:pr-0 font-semibold hasBorder "
              colspan="1"
              data-testid="table__th--0"
              role="columnheader"
            >
              <div
                class="flex flex-inline align-top hidden"
              >
                <div>
                  Avatar
                </div>
              </div>
            </th>
            <th
              class="relative text-sm text-left select-none text-theme-neutral border-theme-neutral-300 dark:text-theme-neutral-dark dark:border-theme-neutral-800 m-0 p-3 first:pl-0 last:pr-0 font-semibold hasBorder "
              colspan="1"
              data-testid="table__th--1"
              role="columnheader"
            >
              <div
                class="flex flex-inline align-top hidden"
              >
                <div>
                  Address
                </div>
              </div>
            </th>
            <th
              class="relative text-sm text-left select-none text-theme-neutral border-theme-neutral-300 dark:text-theme-neutral-dark dark:border-theme-neutral-800 m-0 p-3 first:pl-0 last:pr-0 font-semibold hasBorder "
              colspan="1"
              data-testid="table__th--2"
              role="columnheader"
            >
              <div
                class="flex flex-inline align-top hidden"
              >
                <div>
                  Amount
                </div>
              </div>
            </th>
            <th
              class="relative text-sm text-left select-none text-theme-neutral border-theme-neutral-300 dark:text-theme-neutral-dark dark:border-theme-neutral-800 m-0 p-3 first:pl-0 last:pr-0 font-semibold hasBorder "
              colspan="1"
              data-testid="table__th--3"
              role="columnheader"
            >
              <div
                class="flex flex-inline align-top hidden"
              >
                <div>
                  Action
                </div>
              </div>
            </th>
          </tr>
        </thead>
        <tbody
          role="rowgroup"
        >
          <tr
            class="border-b border-dashed last:border-b-0 border-theme-neutral-300 dark:border-theme-neutral-800"
            data-testid="recipient-list__recipient-list-item"
          >
            <td
              class="py-6 w-14"
            >
              <div
                class="Avatar__AvatarWrapper-sc-1vsy2s2-0 eHceTZ"
                data-testid="Avatar"
              >
                <div
                  class="w-full h-full"
                >
                  <img
                    alt="FJKDSALJFKASLJFKSDAJD333FKFKDSAJFKSAJFKLASJKDFJ"
                    src="data:image/svg+xml;utf8,<svg version=\\"1.1\\" xmlns=\\"http://www.w3.org/2000/svg\\" width=\\"100\\" height=\\"100\\" viewBox=\\"0 0 100 100\\"><style>circle{mix-blend-mode:soft-light;}</style><rect fill=\\"rgb(76, 175, 80)\\" width=\\"100\\" height=\\"100\\"/><circle r=\\"40\\" cx=\\"20\\" cy=\\"30\\" fill=\\"rgb(156, 39, 176)\\"/><circle r=\\"35\\" cx=\\"100\\" cy=\\"70\\" fill=\\"rgb(255, 193, 7)\\"/><circle r=\\"50\\" cx=\\"80\\" cy=\\"50\\" fill=\\"rgb(0, 188, 212)\\"/></svg>"
                    title="FJKDSALJFKASLJFKSDAJD333FKFKDSAJFKSAJFKLASJKDFJ"
                  />
                </div>
              </div>
            </td>
            <td
              class="py-6"
            >
              <div
                class="mb-1 text-sm font-semibold text-theme-neutral"
              >
                <span>
                  Recipient
                   #
                  1
                </span>
              </div>
              <div
                class="max-w-sm"
              >
                <div
                  class="inline-flex items-center"
                >
                  <span
                    class="max-w-24 flex-auto truncate mr-2 font-semibold text-base text-theme-text"
                    data-testid="address__wallet-name"
                  >
                    Recipient 1
                  </span>
                  <span
                    class="sc-AxjAm StDqN text-theme-neutral-500 dark:text-theme-neutral-700 truncate font-semibold text-base"
                    data-testid="address__wallet-address"
                  >
                    FJKDSALJFKASLJFKSDAJD333FKFKDSAJFKSAJFKLASJKDFJ
                  </span>
                </div>
              </div>
            </td>
            <td
              class="py-6"
            >
              <div
                class="mb-1 text-sm font-semibold text-right text-theme-neutral"
              >
                <span>
                  Amount
                </span>
              </div>
              <div
                class="font-bold text-right text-theme-neutral-800"
              >
                <span
                  data-testid="Amount"
                >
                  0.000001 ARK
                </span>
              </div>
            </td>
            <td
              class="w-20 py-6 text-right"
            >
              <button
                class="sc-AxirZ hTzPEr"
                color="primary"
                data-testid="recipient-list__remove-recipient"
                type="button"
              >
                <div
                  class="py-1"
                >
                  <div
                    class="sc-AxiKw dzBdqj"
                    height="1em"
                    width="1em"
                  >
                    <svg>
                      trash.svg
                    </svg>
                  </div>
                </div>
              </button>
            </td>
          </tr>
          <tr
            class="border-b border-dashed last:border-b-0 border-theme-neutral-300 dark:border-theme-neutral-800"
            data-testid="recipient-list__recipient-list-item"
          >
            <td
              class="py-6 w-14"
            >
              <div
                class="Avatar__AvatarWrapper-sc-1vsy2s2-0 eHceTZ"
                data-testid="Avatar"
              >
                <div
                  class="w-full h-full"
                >
                  <img
                    alt="AhFJKDSALJFKASLJFKSDEAJ333FKFKDSAJFKSAJFKLASJKDFJ"
                    src="data:image/svg+xml;utf8,<svg version=\\"1.1\\" xmlns=\\"http://www.w3.org/2000/svg\\" width=\\"100\\" height=\\"100\\" viewBox=\\"0 0 100 100\\"><style>circle{mix-blend-mode:soft-light;}</style><rect fill=\\"rgb(255, 152, 0)\\" width=\\"100\\" height=\\"100\\"/><circle r=\\"50\\" cx=\\"10\\" cy=\\"50\\" fill=\\"rgb(139, 195, 74)\\"/><circle r=\\"60\\" cx=\\"70\\" cy=\\"30\\" fill=\\"rgb(63, 81, 181)\\"/><circle r=\\"55\\" cx=\\"20\\" cy=\\"70\\" fill=\\"rgb(76, 175, 80)\\"/></svg>"
                    title="AhFJKDSALJFKASLJFKSDEAJ333FKFKDSAJFKSAJFKLASJKDFJ"
                  />
                </div>
              </div>
            </td>
            <td
              class="py-6"
            >
              <div
                class="mb-1 text-sm font-semibold text-theme-neutral"
              >
                <span>
                  Recipient
                   #
                  2
                </span>
              </div>
              <div
                class="max-w-sm"
              >
                <div
                  class="inline-flex items-center"
                >
                  <span
                    class="max-w-24 flex-auto truncate mr-2 font-semibold text-base text-theme-text"
                    data-testid="address__wallet-name"
                  >
                    Recipient 2
                  </span>
                  <span
                    class="sc-AxjAm StDqN text-theme-neutral-500 dark:text-theme-neutral-700 truncate font-semibold text-base"
                    data-testid="address__wallet-address"
                  >
                    AhFJKDSALJFKASLJFKSDEAJ333FKFKDSAJFKSAJFKLASJKDFJ
                  </span>
                </div>
              </div>
            </td>
            <td
              class="py-6"
            >
              <div
                class="mb-1 text-sm font-semibold text-right text-theme-neutral"
              >
                <span>
                  Amount
                </span>
              </div>
              <div
                class="font-bold text-right text-theme-neutral-800"
              >
                <span
                  data-testid="Amount"
                >
                  0.000001 ARK
                </span>
              </div>
            </td>
            <td
              class="w-20 py-6 text-right"
            >
              <button
                class="sc-AxirZ hTzPEr"
                color="primary"
                data-testid="recipient-list__remove-recipient"
                type="button"
              >
                <div
                  class="py-1"
                >
                  <div
                    class="sc-AxiKw dzBdqj"
                    height="1em"
                    width="1em"
                  >
                    <svg>
                      trash.svg
                    </svg>
                  </div>
                </div>
              </button>
            </td>
          </tr>
          <tr
            class="border-b border-dashed last:border-b-0 border-theme-neutral-300 dark:border-theme-neutral-800"
            data-testid="recipient-list__recipient-list-item"
          >
            <td
              class="py-6 w-14"
            >
              <div
                class="Avatar__AvatarWrapper-sc-1vsy2s2-0 eHceTZ"
                data-testid="Avatar"
              >
                <div
                  class="w-full h-full"
                >
                  <img
                    alt="FAhFJKDSALJFKASLJFKSFDAJ333FKFKDSAJFKSAJFKLASJKDFJ"
                    src="data:image/svg+xml;utf8,<svg version=\\"1.1\\" xmlns=\\"http://www.w3.org/2000/svg\\" width=\\"100\\" height=\\"100\\" viewBox=\\"0 0 100 100\\"><style>circle{mix-blend-mode:soft-light;}</style><rect fill=\\"rgb(63, 81, 181)\\" width=\\"100\\" height=\\"100\\"/><circle r=\\"35\\" cx=\\"20\\" cy=\\"60\\" fill=\\"rgb(0, 188, 212)\\"/><circle r=\\"45\\" cx=\\"10\\" cy=\\"50\\" fill=\\"rgb(205, 220, 57)\\"/><circle r=\\"50\\" cx=\\"80\\" cy=\\"40\\" fill=\\"rgb(76, 175, 80)\\"/></svg>"
                    title="FAhFJKDSALJFKASLJFKSFDAJ333FKFKDSAJFKSAJFKLASJKDFJ"
                  />
                </div>
              </div>
            </td>
            <td
              class="py-6"
            >
              <div
                class="mb-1 text-sm font-semibold text-theme-neutral"
              >
                <span>
                  Recipient
                   #
                  3
                </span>
              </div>
              <div
                class="max-w-sm"
              >
                <div
                  class="inline-flex items-center"
                >
                  <span
                    class="max-w-24 flex-auto truncate mr-2 font-semibold text-base text-theme-text"
                    data-testid="address__wallet-name"
                  >
                    Recipient 3
                  </span>
                  <span
                    class="sc-AxjAm StDqN text-theme-neutral-500 dark:text-theme-neutral-700 truncate font-semibold text-base"
                    data-testid="address__wallet-address"
                  >
                    FAhFJKDSALJFKASLJFKSFDAJ333FKFKDSAJFKSAJFKLASJKDFJ
                  </span>
                </div>
              </div>
            </td>
            <td
              class="py-6"
            >
              <div
                class="mb-1 text-sm font-semibold text-right text-theme-neutral"
              >
                <span>
                  Amount
                </span>
              </div>
              <div
                class="font-bold text-right text-theme-neutral-800"
              >
                <span
                  data-testid="Amount"
                >
                  0.000001 ARK
                </span>
              </div>
            </td>
            <td
              class="w-20 py-6 text-right"
            >
              <button
                class="sc-AxirZ hTzPEr"
                color="primary"
                data-testid="recipient-list__remove-recipient"
                type="button"
              >
                <div
                  class="py-1"
                >
                  <div
                    class="sc-AxiKw dzBdqj"
                    height="1em"
                    width="1em"
                  >
                    <svg>
                      trash.svg
                    </svg>
                  </div>
                </div>
              </button>
            </td>
          </tr>
          <tr
            class="border-b border-dashed last:border-b-0 border-theme-neutral-300 dark:border-theme-neutral-800"
            data-testid="recipient-list__recipient-list-item"
          >
            <td
              class="py-6 w-14"
            >
              <div
                class="Avatar__AvatarWrapper-sc-1vsy2s2-0 eHceTZ"
                data-testid="Avatar"
              >
                <div
                  class="w-full h-full"
                >
                  <img
                    alt="FAhFJKDSALJFKASLJFKSFDAJ333FKFKDSAJFKSAJFKLASJKDFJ"
                    src="data:image/svg+xml;utf8,<svg version=\\"1.1\\" xmlns=\\"http://www.w3.org/2000/svg\\" width=\\"100\\" height=\\"100\\" viewBox=\\"0 0 100 100\\"><style>circle{mix-blend-mode:soft-light;}</style><rect fill=\\"rgb(63, 81, 181)\\" width=\\"100\\" height=\\"100\\"/><circle r=\\"35\\" cx=\\"20\\" cy=\\"60\\" fill=\\"rgb(0, 188, 212)\\"/><circle r=\\"45\\" cx=\\"10\\" cy=\\"50\\" fill=\\"rgb(205, 220, 57)\\"/><circle r=\\"50\\" cx=\\"80\\" cy=\\"40\\" fill=\\"rgb(76, 175, 80)\\"/></svg>"
                    title="FAhFJKDSALJFKASLJFKSFDAJ333FKFKDSAJFKSAJFKLASJKDFJ"
                  />
                </div>
              </div>
            </td>
            <td
              class="py-6"
            >
              <div
                class="mb-1 text-sm font-semibold text-theme-neutral"
              >
                <span>
                  Recipient
                   #
                  4
                </span>
              </div>
              <div
                class="max-w-sm"
              >
                <div
                  class="inline-flex items-center"
                >
                  <span
                    class="sc-AxjAm StDqN text-theme-text truncate font-semibold text-base"
                    data-testid="address__wallet-address"
                  >
                    FAhFJK … SJKDFJ
                  </span>
                </div>
              </div>
            </td>
            <td
              class="py-6"
            >
              <div
                class="mb-1 text-sm font-semibold text-right text-theme-neutral"
              >
                <span>
                  Amount
                </span>
              </div>
              <div
                class="font-bold text-right text-theme-neutral-800"
              >
                <span
                  data-testid="Amount"
                >
                  0.000001 ARK
                </span>
              </div>
            </td>
            <td
              class="w-20 py-6 text-right"
            >
              <button
                class="sc-AxirZ hTzPEr"
                color="primary"
                data-testid="recipient-list__remove-recipient"
                type="button"
              >
                <div
                  class="py-1"
                >
                  <div
                    class="sc-AxiKw dzBdqj"
                    height="1em"
                    width="1em"
                  >
                    <svg>
                      trash.svg
                    </svg>
                  </div>
                </div>
              </button>
            </td>
          </tr>
        </tbody>
      </table>
    </div>
  </div>
</div>
`;

exports[`RecipientList should render non-editable 1`] = `
<div>
  <div
    class="sc-Axmtr SNYwX"
  >
    <div
      class="sc-AxhUy gupDsa -mt-3"
      role="table"
    >
      <table
        cellpadding="0"
        class="table-auto"
      >
        <thead>
          <tr
            class="border-b border-theme-neutral-300 dark:border-theme-neutral-800"
            role="row"
          >
            <th
              class="relative text-sm text-left select-none text-theme-neutral border-theme-neutral-300 dark:text-theme-neutral-dark dark:border-theme-neutral-800 m-0 p-3 first:pl-0 last:pr-0 font-semibold hasBorder "
              colspan="1"
              data-testid="table__th--0"
              role="columnheader"
            >
              <div
                class="flex flex-inline align-top hidden"
              >
                <div>
                  Avatar
                </div>
              </div>
            </th>
            <th
              class="relative text-sm text-left select-none text-theme-neutral border-theme-neutral-300 dark:text-theme-neutral-dark dark:border-theme-neutral-800 m-0 p-3 first:pl-0 last:pr-0 font-semibold hasBorder "
              colspan="1"
              data-testid="table__th--1"
              role="columnheader"
            >
              <div
                class="flex flex-inline align-top hidden"
              >
                <div>
                  Address
                </div>
              </div>
            </th>
            <th
              class="relative text-sm text-left select-none text-theme-neutral border-theme-neutral-300 dark:text-theme-neutral-dark dark:border-theme-neutral-800 m-0 p-3 first:pl-0 last:pr-0 font-semibold hasBorder "
              colspan="1"
              data-testid="table__th--2"
              role="columnheader"
            >
              <div
                class="flex flex-inline align-top hidden"
              >
                <div>
                  Amount
                </div>
              </div>
            </th>
          </tr>
        </thead>
        <tbody
          role="rowgroup"
        >
          <tr
            class="border-b border-dashed last:border-b-0 border-theme-neutral-300 dark:border-theme-neutral-800"
            data-testid="recipient-list__recipient-list-item"
          >
            <td
              class="py-6 w-14"
            >
              <div
                class="Avatar__AvatarWrapper-sc-1vsy2s2-0 eHceTZ"
                data-testid="Avatar"
              >
                <div
                  class="w-full h-full"
                >
                  <img
                    alt="FJKDSALJFKASLJFKSDAJD333FKFKDSAJFKSAJFKLASJKDFJ"
                    src="data:image/svg+xml;utf8,<svg version=\\"1.1\\" xmlns=\\"http://www.w3.org/2000/svg\\" width=\\"100\\" height=\\"100\\" viewBox=\\"0 0 100 100\\"><style>circle{mix-blend-mode:soft-light;}</style><rect fill=\\"rgb(76, 175, 80)\\" width=\\"100\\" height=\\"100\\"/><circle r=\\"40\\" cx=\\"20\\" cy=\\"30\\" fill=\\"rgb(156, 39, 176)\\"/><circle r=\\"35\\" cx=\\"100\\" cy=\\"70\\" fill=\\"rgb(255, 193, 7)\\"/><circle r=\\"50\\" cx=\\"80\\" cy=\\"50\\" fill=\\"rgb(0, 188, 212)\\"/></svg>"
                    title="FJKDSALJFKASLJFKSDAJD333FKFKDSAJFKSAJFKLASJKDFJ"
                  />
                </div>
              </div>
            </td>
            <td
              class="py-6"
            >
              <div
                class="mb-1 text-sm font-semibold text-theme-neutral"
              >
                <span>
                  Recipient
                   #
                  1
                </span>
              </div>
              <div
                class="max-w-sm"
              >
                <div
                  class="inline-flex items-center"
                >
                  <span
                    class="max-w-24 flex-auto truncate mr-2 font-semibold text-base text-theme-text"
                    data-testid="address__wallet-name"
                  >
                    Recipient 1
                  </span>
                  <span
                    class="sc-AxjAm StDqN text-theme-neutral-500 dark:text-theme-neutral-700 truncate font-semibold text-base"
                    data-testid="address__wallet-address"
                  >
                    FJKDSALJFKASLJFKSDAJD333FKFKDSAJFKSAJFKLASJKDFJ
                  </span>
                </div>
              </div>
            </td>
            <td
              class="py-6"
            >
              <div
                class="mb-1 text-sm font-semibold text-right text-theme-neutral"
              >
                <span>
                  Amount
                </span>
              </div>
              <div
                class="font-bold text-right text-theme-neutral-800"
              >
                <span
                  data-testid="Amount"
                >
                  0.000001 ARK
                </span>
              </div>
            </td>
          </tr>
          <tr
            class="border-b border-dashed last:border-b-0 border-theme-neutral-300 dark:border-theme-neutral-800"
            data-testid="recipient-list__recipient-list-item"
          >
            <td
              class="py-6 w-14"
            >
              <div
                class="Avatar__AvatarWrapper-sc-1vsy2s2-0 eHceTZ"
                data-testid="Avatar"
              >
                <div
                  class="w-full h-full"
                >
                  <img
                    alt="AhFJKDSALJFKASLJFKSDEAJ333FKFKDSAJFKSAJFKLASJKDFJ"
                    src="data:image/svg+xml;utf8,<svg version=\\"1.1\\" xmlns=\\"http://www.w3.org/2000/svg\\" width=\\"100\\" height=\\"100\\" viewBox=\\"0 0 100 100\\"><style>circle{mix-blend-mode:soft-light;}</style><rect fill=\\"rgb(255, 152, 0)\\" width=\\"100\\" height=\\"100\\"/><circle r=\\"50\\" cx=\\"10\\" cy=\\"50\\" fill=\\"rgb(139, 195, 74)\\"/><circle r=\\"60\\" cx=\\"70\\" cy=\\"30\\" fill=\\"rgb(63, 81, 181)\\"/><circle r=\\"55\\" cx=\\"20\\" cy=\\"70\\" fill=\\"rgb(76, 175, 80)\\"/></svg>"
                    title="AhFJKDSALJFKASLJFKSDEAJ333FKFKDSAJFKSAJFKLASJKDFJ"
                  />
                </div>
              </div>
            </td>
            <td
              class="py-6"
            >
              <div
                class="mb-1 text-sm font-semibold text-theme-neutral"
              >
                <span>
                  Recipient
                   #
                  2
                </span>
              </div>
              <div
                class="max-w-sm"
              >
                <div
                  class="inline-flex items-center"
                >
                  <span
                    class="max-w-24 flex-auto truncate mr-2 font-semibold text-base text-theme-text"
                    data-testid="address__wallet-name"
                  >
                    Recipient 2
                  </span>
                  <span
                    class="sc-AxjAm StDqN text-theme-neutral-500 dark:text-theme-neutral-700 truncate font-semibold text-base"
                    data-testid="address__wallet-address"
                  >
                    AhFJKDSALJFKASLJFKSDEAJ333FKFKDSAJFKSAJFKLASJKDFJ
                  </span>
                </div>
              </div>
            </td>
            <td
              class="py-6"
            >
              <div
                class="mb-1 text-sm font-semibold text-right text-theme-neutral"
              >
                <span>
                  Amount
                </span>
              </div>
              <div
                class="font-bold text-right text-theme-neutral-800"
              >
                <span
                  data-testid="Amount"
                >
                  0.000001 ARK
                </span>
              </div>
            </td>
          </tr>
          <tr
            class="border-b border-dashed last:border-b-0 border-theme-neutral-300 dark:border-theme-neutral-800"
            data-testid="recipient-list__recipient-list-item"
          >
            <td
              class="py-6 w-14"
            >
              <div
                class="Avatar__AvatarWrapper-sc-1vsy2s2-0 eHceTZ"
                data-testid="Avatar"
              >
                <div
                  class="w-full h-full"
                >
                  <img
                    alt="FAhFJKDSALJFKASLJFKSFDAJ333FKFKDSAJFKSAJFKLASJKDFJ"
                    src="data:image/svg+xml;utf8,<svg version=\\"1.1\\" xmlns=\\"http://www.w3.org/2000/svg\\" width=\\"100\\" height=\\"100\\" viewBox=\\"0 0 100 100\\"><style>circle{mix-blend-mode:soft-light;}</style><rect fill=\\"rgb(63, 81, 181)\\" width=\\"100\\" height=\\"100\\"/><circle r=\\"35\\" cx=\\"20\\" cy=\\"60\\" fill=\\"rgb(0, 188, 212)\\"/><circle r=\\"45\\" cx=\\"10\\" cy=\\"50\\" fill=\\"rgb(205, 220, 57)\\"/><circle r=\\"50\\" cx=\\"80\\" cy=\\"40\\" fill=\\"rgb(76, 175, 80)\\"/></svg>"
                    title="FAhFJKDSALJFKASLJFKSFDAJ333FKFKDSAJFKSAJFKLASJKDFJ"
                  />
                </div>
              </div>
            </td>
            <td
              class="py-6"
            >
              <div
                class="mb-1 text-sm font-semibold text-theme-neutral"
              >
                <span>
                  Recipient
                   #
                  3
                </span>
              </div>
              <div
                class="max-w-sm"
              >
                <div
                  class="inline-flex items-center"
                >
                  <span
                    class="max-w-24 flex-auto truncate mr-2 font-semibold text-base text-theme-text"
                    data-testid="address__wallet-name"
                  >
                    Recipient 3
                  </span>
                  <span
                    class="sc-AxjAm StDqN text-theme-neutral-500 dark:text-theme-neutral-700 truncate font-semibold text-base"
                    data-testid="address__wallet-address"
                  >
                    FAhFJKDSALJFKASLJFKSFDAJ333FKFKDSAJFKSAJFKLASJKDFJ
                  </span>
                </div>
              </div>
            </td>
            <td
              class="py-6"
            >
              <div
                class="mb-1 text-sm font-semibold text-right text-theme-neutral"
              >
                <span>
                  Amount
                </span>
              </div>
              <div
                class="font-bold text-right text-theme-neutral-800"
              >
                <span
                  data-testid="Amount"
                >
                  0.000001 ARK
                </span>
              </div>
            </td>
          </tr>
          <tr
            class="border-b border-dashed last:border-b-0 border-theme-neutral-300 dark:border-theme-neutral-800"
            data-testid="recipient-list__recipient-list-item"
          >
            <td
              class="py-6 w-14"
            >
              <div
                class="Avatar__AvatarWrapper-sc-1vsy2s2-0 eHceTZ"
                data-testid="Avatar"
              >
                <div
                  class="w-full h-full"
                >
                  <img
                    alt="FAhFJKDSALJFKASLJFKSFDAJ333FKFKDSAJFKSAJFKLASJKDFJ"
                    src="data:image/svg+xml;utf8,<svg version=\\"1.1\\" xmlns=\\"http://www.w3.org/2000/svg\\" width=\\"100\\" height=\\"100\\" viewBox=\\"0 0 100 100\\"><style>circle{mix-blend-mode:soft-light;}</style><rect fill=\\"rgb(63, 81, 181)\\" width=\\"100\\" height=\\"100\\"/><circle r=\\"35\\" cx=\\"20\\" cy=\\"60\\" fill=\\"rgb(0, 188, 212)\\"/><circle r=\\"45\\" cx=\\"10\\" cy=\\"50\\" fill=\\"rgb(205, 220, 57)\\"/><circle r=\\"50\\" cx=\\"80\\" cy=\\"40\\" fill=\\"rgb(76, 175, 80)\\"/></svg>"
                    title="FAhFJKDSALJFKASLJFKSFDAJ333FKFKDSAJFKSAJFKLASJKDFJ"
                  />
                </div>
              </div>
            </td>
            <td
              class="py-6"
            >
              <div
                class="mb-1 text-sm font-semibold text-theme-neutral"
              >
                <span>
                  Recipient
                   #
                  4
                </span>
              </div>
              <div
                class="max-w-sm"
              >
                <div
                  class="inline-flex items-center"
                >
                  <span
                    class="sc-AxjAm StDqN text-theme-text truncate font-semibold text-base"
                    data-testid="address__wallet-address"
                  >
                    FAhFJK … SJKDFJ
                  </span>
                </div>
              </div>
            </td>
            <td
              class="py-6"
            >
              <div
                class="mb-1 text-sm font-semibold text-right text-theme-neutral"
              >
                <span>
                  Amount
                </span>
              </div>
              <div
                class="font-bold text-right text-theme-neutral-800"
              >
                <span
                  data-testid="Amount"
                >
                  0.000001 ARK
                </span>
              </div>
            </td>
          </tr>
        </tbody>
      </table>
    </div>
  </div>
</div>
`;

exports[`RecipientList should render without amount column 1`] = `
<div>
  <div
    class="sc-Axmtr SNYwX"
  >
    <div
      class="sc-AxhUy gupDsa -mt-3"
      role="table"
    >
      <table
        cellpadding="0"
        class="table-auto"
      >
        <thead>
          <tr
            class="border-b border-theme-neutral-300 dark:border-theme-neutral-800"
            role="row"
          >
            <th
              class="relative text-sm text-left select-none text-theme-neutral border-theme-neutral-300 dark:text-theme-neutral-dark dark:border-theme-neutral-800 m-0 p-3 first:pl-0 last:pr-0 font-semibold hasBorder "
              colspan="1"
              data-testid="table__th--0"
              role="columnheader"
            >
              <div
                class="flex flex-inline align-top hidden"
              >
                <div>
                  Avatar
                </div>
              </div>
            </th>
            <th
              class="relative text-sm text-left select-none text-theme-neutral border-theme-neutral-300 dark:text-theme-neutral-dark dark:border-theme-neutral-800 m-0 p-3 first:pl-0 last:pr-0 font-semibold hasBorder "
              colspan="1"
              data-testid="table__th--1"
              role="columnheader"
            >
              <div
                class="flex flex-inline align-top hidden"
              >
                <div>
                  Address
                </div>
              </div>
            </th>
            <th
              class="relative text-sm text-left select-none text-theme-neutral border-theme-neutral-300 dark:text-theme-neutral-dark dark:border-theme-neutral-800 m-0 p-3 first:pl-0 last:pr-0 font-semibold hasBorder "
              colspan="1"
              data-testid="table__th--2"
              role="columnheader"
            >
              <div
                class="flex flex-inline align-top hidden"
              >
                <div>
                  Action
                </div>
              </div>
            </th>
          </tr>
        </thead>
        <tbody
          role="rowgroup"
        >
          <tr
            class="border-b border-dashed last:border-b-0 border-theme-neutral-300 dark:border-theme-neutral-800"
            data-testid="recipient-list__recipient-list-item"
          >
            <td
              class="py-6 w-14"
            >
              <div
                class="Avatar__AvatarWrapper-sc-1vsy2s2-0 eHceTZ"
                data-testid="Avatar"
              >
                <div
                  class="w-full h-full"
                >
                  <img
                    alt="FJKDSALJFKASLJFKSDAJD333FKFKDSAJFKSAJFKLASJKDFJ"
                    src="data:image/svg+xml;utf8,<svg version=\\"1.1\\" xmlns=\\"http://www.w3.org/2000/svg\\" width=\\"100\\" height=\\"100\\" viewBox=\\"0 0 100 100\\"><style>circle{mix-blend-mode:soft-light;}</style><rect fill=\\"rgb(76, 175, 80)\\" width=\\"100\\" height=\\"100\\"/><circle r=\\"40\\" cx=\\"20\\" cy=\\"30\\" fill=\\"rgb(156, 39, 176)\\"/><circle r=\\"35\\" cx=\\"100\\" cy=\\"70\\" fill=\\"rgb(255, 193, 7)\\"/><circle r=\\"50\\" cx=\\"80\\" cy=\\"50\\" fill=\\"rgb(0, 188, 212)\\"/></svg>"
                    title="FJKDSALJFKASLJFKSDAJD333FKFKDSAJFKSAJFKLASJKDFJ"
                  />
                </div>
              </div>
            </td>
            <td
              class="py-6"
            >
              <div
                class="mb-1 text-sm font-semibold text-theme-neutral"
              >
                <span>
                  Recipient
                   #
                  1
                </span>
              </div>
              <div
                class="max-w-sm"
              >
                <div
                  class="inline-flex items-center"
                >
                  <span
                    class="max-w-24 flex-auto truncate mr-2 font-semibold text-base text-theme-text"
                    data-testid="address__wallet-name"
                  >
                    Recipient 1
                  </span>
                  <span
                    class="sc-AxjAm StDqN text-theme-neutral-500 dark:text-theme-neutral-700 truncate font-semibold text-base"
                    data-testid="address__wallet-address"
                  >
                    FJKDSALJFKASLJFKSDAJD333FKFKDSAJFKSAJFKLASJKDFJ
                  </span>
                </div>
              </div>
            </td>
            <td
              class="w-20 py-6 text-right"
            >
              <button
                class="sc-AxirZ hTzPEr"
                color="primary"
                data-testid="recipient-list__remove-recipient"
                type="button"
              >
                <div
                  class="py-1"
                >
                  <div
                    class="sc-AxiKw dzBdqj"
                    height="1em"
                    width="1em"
                  >
                    <svg>
                      trash.svg
                    </svg>
                  </div>
                </div>
              </button>
            </td>
          </tr>
          <tr
            class="border-b border-dashed last:border-b-0 border-theme-neutral-300 dark:border-theme-neutral-800"
            data-testid="recipient-list__recipient-list-item"
          >
            <td
              class="py-6 w-14"
            >
              <div
                class="Avatar__AvatarWrapper-sc-1vsy2s2-0 eHceTZ"
                data-testid="Avatar"
              >
                <div
                  class="w-full h-full"
                >
                  <img
                    alt="AhFJKDSALJFKASLJFKSDEAJ333FKFKDSAJFKSAJFKLASJKDFJ"
                    src="data:image/svg+xml;utf8,<svg version=\\"1.1\\" xmlns=\\"http://www.w3.org/2000/svg\\" width=\\"100\\" height=\\"100\\" viewBox=\\"0 0 100 100\\"><style>circle{mix-blend-mode:soft-light;}</style><rect fill=\\"rgb(255, 152, 0)\\" width=\\"100\\" height=\\"100\\"/><circle r=\\"50\\" cx=\\"10\\" cy=\\"50\\" fill=\\"rgb(139, 195, 74)\\"/><circle r=\\"60\\" cx=\\"70\\" cy=\\"30\\" fill=\\"rgb(63, 81, 181)\\"/><circle r=\\"55\\" cx=\\"20\\" cy=\\"70\\" fill=\\"rgb(76, 175, 80)\\"/></svg>"
                    title="AhFJKDSALJFKASLJFKSDEAJ333FKFKDSAJFKSAJFKLASJKDFJ"
                  />
                </div>
              </div>
            </td>
            <td
              class="py-6"
            >
              <div
                class="mb-1 text-sm font-semibold text-theme-neutral"
              >
                <span>
                  Recipient
                   #
                  2
                </span>
              </div>
              <div
                class="max-w-sm"
              >
                <div
                  class="inline-flex items-center"
                >
                  <span
                    class="max-w-24 flex-auto truncate mr-2 font-semibold text-base text-theme-text"
                    data-testid="address__wallet-name"
                  >
                    Recipient 2
                  </span>
                  <span
                    class="sc-AxjAm StDqN text-theme-neutral-500 dark:text-theme-neutral-700 truncate font-semibold text-base"
                    data-testid="address__wallet-address"
                  >
                    AhFJKDSALJFKASLJFKSDEAJ333FKFKDSAJFKSAJFKLASJKDFJ
                  </span>
                </div>
              </div>
            </td>
            <td
              class="w-20 py-6 text-right"
            >
              <button
                class="sc-AxirZ hTzPEr"
                color="primary"
                data-testid="recipient-list__remove-recipient"
                type="button"
              >
                <div
                  class="py-1"
                >
                  <div
                    class="sc-AxiKw dzBdqj"
                    height="1em"
                    width="1em"
                  >
                    <svg>
                      trash.svg
                    </svg>
                  </div>
                </div>
              </button>
            </td>
          </tr>
          <tr
            class="border-b border-dashed last:border-b-0 border-theme-neutral-300 dark:border-theme-neutral-800"
            data-testid="recipient-list__recipient-list-item"
          >
            <td
              class="py-6 w-14"
            >
              <div
                class="Avatar__AvatarWrapper-sc-1vsy2s2-0 eHceTZ"
                data-testid="Avatar"
              >
                <div
                  class="w-full h-full"
                >
                  <img
                    alt="FAhFJKDSALJFKASLJFKSFDAJ333FKFKDSAJFKSAJFKLASJKDFJ"
                    src="data:image/svg+xml;utf8,<svg version=\\"1.1\\" xmlns=\\"http://www.w3.org/2000/svg\\" width=\\"100\\" height=\\"100\\" viewBox=\\"0 0 100 100\\"><style>circle{mix-blend-mode:soft-light;}</style><rect fill=\\"rgb(63, 81, 181)\\" width=\\"100\\" height=\\"100\\"/><circle r=\\"35\\" cx=\\"20\\" cy=\\"60\\" fill=\\"rgb(0, 188, 212)\\"/><circle r=\\"45\\" cx=\\"10\\" cy=\\"50\\" fill=\\"rgb(205, 220, 57)\\"/><circle r=\\"50\\" cx=\\"80\\" cy=\\"40\\" fill=\\"rgb(76, 175, 80)\\"/></svg>"
                    title="FAhFJKDSALJFKASLJFKSFDAJ333FKFKDSAJFKSAJFKLASJKDFJ"
                  />
                </div>
              </div>
            </td>
            <td
              class="py-6"
            >
              <div
                class="mb-1 text-sm font-semibold text-theme-neutral"
              >
                <span>
                  Recipient
                   #
                  3
                </span>
              </div>
              <div
                class="max-w-sm"
              >
                <div
                  class="inline-flex items-center"
                >
                  <span
                    class="max-w-24 flex-auto truncate mr-2 font-semibold text-base text-theme-text"
                    data-testid="address__wallet-name"
                  >
                    Recipient 3
                  </span>
                  <span
                    class="sc-AxjAm StDqN text-theme-neutral-500 dark:text-theme-neutral-700 truncate font-semibold text-base"
                    data-testid="address__wallet-address"
                  >
                    FAhFJKDSALJFKASLJFKSFDAJ333FKFKDSAJFKSAJFKLASJKDFJ
                  </span>
                </div>
              </div>
            </td>
            <td
              class="w-20 py-6 text-right"
            >
              <button
                class="sc-AxirZ hTzPEr"
                color="primary"
                data-testid="recipient-list__remove-recipient"
                type="button"
              >
                <div
                  class="py-1"
                >
                  <div
                    class="sc-AxiKw dzBdqj"
                    height="1em"
                    width="1em"
                  >
                    <svg>
                      trash.svg
                    </svg>
                  </div>
                </div>
              </button>
            </td>
          </tr>
          <tr
            class="border-b border-dashed last:border-b-0 border-theme-neutral-300 dark:border-theme-neutral-800"
            data-testid="recipient-list__recipient-list-item"
          >
            <td
              class="py-6 w-14"
            >
              <div
                class="Avatar__AvatarWrapper-sc-1vsy2s2-0 eHceTZ"
                data-testid="Avatar"
              >
                <div
                  class="w-full h-full"
                >
                  <img
                    alt="FAhFJKDSALJFKASLJFKSFDAJ333FKFKDSAJFKSAJFKLASJKDFJ"
                    src="data:image/svg+xml;utf8,<svg version=\\"1.1\\" xmlns=\\"http://www.w3.org/2000/svg\\" width=\\"100\\" height=\\"100\\" viewBox=\\"0 0 100 100\\"><style>circle{mix-blend-mode:soft-light;}</style><rect fill=\\"rgb(63, 81, 181)\\" width=\\"100\\" height=\\"100\\"/><circle r=\\"35\\" cx=\\"20\\" cy=\\"60\\" fill=\\"rgb(0, 188, 212)\\"/><circle r=\\"45\\" cx=\\"10\\" cy=\\"50\\" fill=\\"rgb(205, 220, 57)\\"/><circle r=\\"50\\" cx=\\"80\\" cy=\\"40\\" fill=\\"rgb(76, 175, 80)\\"/></svg>"
                    title="FAhFJKDSALJFKASLJFKSFDAJ333FKFKDSAJFKSAJFKLASJKDFJ"
                  />
                </div>
              </div>
            </td>
            <td
              class="py-6"
            >
              <div
                class="mb-1 text-sm font-semibold text-theme-neutral"
              >
                <span>
                  Recipient
                   #
                  4
                </span>
              </div>
              <div
                class="max-w-sm"
              >
                <div
                  class="inline-flex items-center"
                >
                  <span
                    class="sc-AxjAm StDqN text-theme-text truncate font-semibold text-base"
                    data-testid="address__wallet-address"
                  >
                    FAhFJKDSALJFKASLJFKSFDAJ333FKFKDSAJFKSAJFKLASJKDFJ
                  </span>
                </div>
              </div>
            </td>
            <td
              class="w-20 py-6 text-right"
            >
              <button
                class="sc-AxirZ hTzPEr"
                color="primary"
                data-testid="recipient-list__remove-recipient"
                type="button"
              >
                <div
                  class="py-1"
                >
                  <div
                    class="sc-AxiKw dzBdqj"
                    height="1em"
                    width="1em"
                  >
                    <svg>
                      trash.svg
                    </svg>
                  </div>
                </div>
              </button>
            </td>
          </tr>
        </tbody>
      </table>
    </div>
  </div>
</div>
`;
